--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,11 +6,14 @@
 <title>Quiz Expert</title>
 </head>
 <body>
-  <div class="container">
-    <h1>Quiz Expert</h1>
-    <div class="typewriter">
-        <p>Welcome to Quiz Central, your premier destination for challenging your knowledge and crafting your own quizzes!</p>
-    </div>    
-</div>
+    <div class="container">
+      <header>
+          <h1>Welcome to Quiz Master</h1>
+          <p style="color: white;">Welcome to Quiz Central, your premier destination for challenging your knowledge!</p>
+      </header>
+      <main>
+          <button id="startQuiz" (click)="startQuiz()">Start Quiz</button>
+      </main>
+  </div>
 </body>
 </html>
