--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,7 +1,7 @@
 <h1 class="title">{{quiz?.title}}</h1>
 <div *ngIf="!quizOver" id="quiz-container">
     <div class="question" *ngIf="currentQuestion?.title || false">{{currentQuestion.title || ""}}</div>
-    <p *ngIf="currentQuestion">Category: {{categories.categories[currentQuestion.category - 1] || ""}}</p>
+    <p *ngIf="currentQuestion">Category: {{currentCategory || ""}}</p>
     <p *ngIf="questions">Question {{currentQuestionIndex + 1}}/{{questions.length || 0}}</p>
     <div class="answer-container" *ngIf="currentQuestion">
       <div [ngClass]="{'answer': true, 'correct': isSelectedCorrect(0), 'incorrect': isSelectedIncorrect(0)}" (click)="checkAnswer(0)">{{currentQuestion.answers[0]}}</div>
