--- a/src/app/admin/create-question/create-question.component.html
+++ b/src/app/admin/create-question/create-question.component.html
@@ -33,12 +33,11 @@
 
         <label for="category">Category:</label>
         <select id="category" name="category" required (change)="onCategoryChange($event)">
-            <option *ngFor="let category of categories?.categories; let i = index" [value]="category">
-              {{ category }}
+            <option *ngFor="let category of categories; let i = index" [value]="category.id">
+                {{ category.title }}
             </option>
-          </select>
-          <br>
-
+        </select>
+        <br>
         <div style="color: white; font-size: 20px;" *ngIf="createQuestionGroup.controls['title'].invalid && (createQuestionGroup.controls['title'].dirty || createQuestionGroup.controls['title'].touched)">
             Title needs to have at least 4 characters
         </div>
