--- a/src/app/admin/create-quiz/create-quiz.component.html
+++ b/src/app/admin/create-quiz/create-quiz.component.html
@@ -14,11 +14,15 @@
     </div>
     
     <div class="questions-container">
-      <div *ngFor="let question of loadedQuestions | filter: searchText, let i = index;" class="question-item">
-        <input type="checkbox" [id]="'question' + question.id" name="questions" 
-               (change)="questionSelection($event, question.id!!)">
-        <label [for]="'question' + question.id">{{question.title}}</label>
+      <div *ngFor="let question of loadedQuestions | filter: searchText; let i = index;" class="question-item">
+        <input type="checkbox" 
+               [id]="'question' + question.id" 
+               name="questions"
+               [checked]="selectedQuestions.includes(question.id)" 
+               (change)="questionSelection($event, question.id)">
+        <label [for]="'question' + question.id">{{ question.title }}</label>
       </div>
     </div>
+    
   </form>
 </div>
