--- a/src/app/components/question/question.component.css
+++ b/src/app/components/question/question.component.css
@@ -22,7 +22,7 @@ body {
 .question {
   font-size: 1.8em;
   margin-bottom: 20px;
-  color: #ffd700; /* Golden Yellow */
+  color: #ffd700;
 }
 
 .answer-container {
