--- a/src/app/components/quiz/quiz.component.css
+++ b/src/app/components/quiz/quiz.component.css
@@ -106,3 +106,10 @@
     font-size: 40px;
   }
   
+  .spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+  }
