Added environment, spinner to home

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -59,3 +59,10 @@ header p {
     line-height: 1.6;
 }
 
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+  }
