--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,10 @@
           <button id="startQuiz" (click)="startQuiz()">Start Quiz</button>
           <div id="randomFactContainer">
             <p style="font-size: 25px; color: white;">Random fact</p>
-            <p id="randomFact">{{facts[0].fact}}</p>
+            <div class="spinner-container">
+              <mat-spinner *ngIf="isLoadingFact"></mat-spinner>
+            </div>
+            <p id="randomFact">{{facts[0]?.fact || ''}}</p>
         </div>
       </main>
   </div>
