--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,8 +8,8 @@
 <body>
     <div class="container">
       <header>
-          <h1>Welcome to Quiz Master</h1>
-          <p style="color: white;">Welcome to Quiz Central, your premier destination for challenging your knowledge!</p>
+          <h1>Welcome to Quiz Expert</h1>
+          <p style="color: white;">Welcome to Quiz Expert, your premier destination for challenging your knowledge!</p>
       </header>
       <main>
           <button id="startQuiz" (click)="startQuiz()">Start Quiz</button>
